# nix-config

./: .gitignore  flake.nix  flake.nix.bak.20260123-230756
modules/general/: flake-parts.nix  nix.nix  state-version.nix  templates.nix
modules/home/: aerospace.nix  agent-skills.nix  git.nix  zsh.nix
modules/home/agent-skills/.template/: README.md  SKILL.md
modules/home/claude-config/: instructions.nix  skills.nix
modules/home/claude-config/skills/.template/: README.md
modules/home/codex-config/: AGENTS.md  instructions.nix
modules/home/oh-my-posh/: gruvbox.omp.json
modules/hosts/: home-manager.nix  options.nix  users.nix
modules/hosts/darwin/: homebrew.nix  linux-builder.nix  packages.nix  system-base.nix
modules/hosts/darwin/McDev/: default.nix
templates/default/: flake.nix
templates/latex/: .gitignore  flake.nix  main.tex
templates/python/: .gitignore  flake.nix  pyproject.toml
